# rye_template

./: .gitignore  .pre-commit-config.yaml  README.md  cspell.json  pyproject.toml  requirements-test.txt
.github/workflows/: cicd-pipeline.yml  lint.yml  static-analysis.yml  test.yml
src/: main.py
tests/: test_main.py
