[project]
name = "my_project"
version = "0.1.0"
description = "Add a short description here"
authors = []
dependencies = []
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    # black互換のformatterが0.1.2以降
    "mypy>=0.1.4",
    "ruff"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
strict = true

[tool.ruff]
select = [
    "F", # pyflakes
    "E", # pycodestyle
    "W", # pycodestyle warnings
    "I", # isort
]
ignore = []
# 1行の最大文字数
line-length = 88

[tool.ruff.per-file-ignores]
# 個別設定
# __init__.pyは未使用インポートを許容
"__init__.py" = ["F401"]
